--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   ></script>
   
 
-<script>var Alert = ReactBootstrap.Alert;</script>
+<!-- <script>var Alert = ReactBootstrap.Alert;</script> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
